--- a/doc01.html
+++ b/doc01.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>HTML 시작하기</title>
+        <title>HTML 분석하기</title>
     </head>
     
     <body>
